Fixing the quote beign too wide

--- a/client/components/annotations/main.scss
+++ b/client/components/annotations/main.scss
@@ -35,6 +35,7 @@ $highlight: rgb(80,212,196);
 }
 
 .speech__annotation {
+    box-sizing: border-box;
     visibility: hidden;
     border-left: 3px solid $highlight;
     padding-left: 10px;
